Update index.html to enhance header content and add new card section

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+  <!-- Navbar -->
   <nav class="navbar">
     <img src="images/logo.png" alt="logo" width="120px">
     <ul class="nav-links">
@@ -24,10 +26,16 @@
     </ul>
   </nav>
 
+  <!-- Header -->
+
   <header class="head">
     <div class="text">
       <h1>Welcome to January Cohort<br> Class,
-        <span>SQI is a college of ICT</span>
+        <span>SQI is a college of ICT <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+            class="bi bi-list" viewBox="0 0 16 16">
+            <path fill-rule="evenodd"
+              d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
+          </svg></span>
       </h1>
       <button class="btn"><a href="">Get started</a></button>
 
@@ -35,6 +43,32 @@
 
     <img src="images/pexels-jopwell-2422286..jpg" alt="">
   </header>
+
+  <!-- Card sections -->
+
+  <div class="cards">
+    <div class="card1">
+      <img src="images/image1.png" alt="">
+      <h2><a href="">AI and the Web</a></h2>
+      <p>Discover resources created to help you understand and build performant, web-first experiences with AI.</p>
+      <button class="btn2"><a href="">Learn More</a></button>
+    </div>
+
+    <div class="card2">
+      <img src="images/image2.png" alt="">
+      <h2><a href="">Optimize INP</a></h2>
+      <p>Interaction to Next Paint (INP) is now a Core Web Vital metrics. Start measuring and optimizing your site's INP.</p>
+      <button class="btn2"><a href="">Learn More</a></button>
+    </div>
+
+    <div class="card3">
+      <img src="images/image3.png" alt="">
+      <h2><a href="">Payment & Identity</a></h2>
+      <p>Read up on the latest features and best practices when it comes to identity and payment processing.</p>
+      <button class="btn2"><a href="">Learn More</a></button>
+    </div>
+
+  </div>
 
 </body>
 
